# video_auto

./: .gitignore  README.md  _run_all_suspended.py  check.bat  env_report.txt  extract_frames.py  merge_0515_features.py  requirements.txt  run_night_fishing.py  save.bat  step10_build_dataset_v2.py  step11_split_v2.py  step12_build_3cls.py  step13_train_3cls.py  step14_eval_3cls.py  step15_batch_3cls.py  step1_stats.py  step2_split.py  step3_train.py  step5_timeline.py  step6_timeline_v1.py  step7_timeline_window.py  step8_analyzer_gpu.py  step9_batch_nets.py  timeline_3cls_summary.csv  timeline_summary.csv  update.bat
.claude/: settings.local.json
configs/: config.yaml  schema.yaml
cpp_pipeline/: CMakeLists.txt  rebuild.bat
cpp_pipeline/include/: binary_writer.h  csv_writer.h  feature_extractor.h  pipeline.h  video_processor.h
cpp_pipeline/scripts/: build.bat  build.sh
cpp_pipeline/src/: main.cpp
netbag/: benchmark.py  dataset.yaml  extract_best_frame.py  predict_preview.py  prepare_dataset.py  production_test.py  test_batch128_and_fp.py  train.py  verify_results.py  video_test.py
pipeline/: batch_process.py  build_report.py  compare_python_vs_cpp.py  cpp_scaling_benchmark.py  cxx_benchmark.py  gpu_decode_benchmark.py  gpu_scaling_benchmark.py  pipeline_status.md  plot_gpu_features.py  plot_night_features.py  run_night.py  scan_nas_and_benchmark.py  worker_benchmark.py
reports/: estimated_total_runtime.txt  nightly_operation_summary.csv  processing_benchmark.csv
roi_design/: draw_roi_v1.py  generate_roi_reference.py
src/: LEGACY_MIGRATED_TO_PIPELINE.md  (+11 more)
(+441 files in other folders)
